fix user photo on mobile

--- a/app/style.sass
+++ b/app/style.sass
@@ -227,10 +227,6 @@ h1, h2, h3, h4, h5, h6
 #profile-pic
   padding: 0px
   margin: 0px
-  
-.profile-pic
-  padding: 0px
-  margin: 0px
 
 .login-glyph
   font-size: 0.8em
